--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="index.js"></script>
+  <script src="Main.js"></script>
 <script>
   var tabName = localStorage.getItem('tabname');
   document.title = (tabName)
