--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <h3>Clicker Game</h3>
 
   <img src='num.jpeg'>
-  <h2>Go To</h2> <a href='https://deoweb.github.io/num'>NumNum!  (click me)</a>
+  <h2>Go To</h2> <a href='https://deoweb.github.io/NumNum!'>NumNum!  (click me)</a>
   <h3>Math game</h3>
 </body>
 
