--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   <img src='num.jpeg'>
   <h2>Go To</h2> <a href='https://deoweb.github.io/NumNum!'>NumNum!  (click me)</a>
   <h3>Math game</h3>
+
+  <img src='IMG_0099.png'>
+  <h2>Go To</h2> <a href='https://deoweb.github.io/Gd'>Geometry Dash  (click me)</a>
+  <h3>Rhythm Game</h3>
 </body>
 
 </html>
