Update scams.html for uzi

--- a/scams.html
+++ b/scams.html
@@ -81,7 +81,7 @@
             <img src="titan.png" alt="Titan Stress Shot">
             <div class="item-content">
                 <div class="item-title">Titan Stress Shot</div>
-                <div class="item-price"> ̶$̶2̶9̶.̶9̶9̶   <p>$4.50 !</p> (Unnew - 7.55$)</div>
+                <div class="item-price">$̶2̶9̶.̶9̶9̶ <p>$4.50 !</p> (Unnew - 7.55$)</div>
                 <a href="https://www.aliexpress.us/item/3256805863398142.html?spm=a2g0n.productlist.0.0.1cda47ba6IY365&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb364487200e05fcd22e7d53b0&gclid=&pdp_npi=4%40dis%21USD%217.56%214.31%21%21%2153.61%21%21%402101fd4b17042163805373685e5fb3%2112000035491678964%21sea%21US%210%21AB&algo_pvid=89481ae1-14b4-4b21-9b22-a59ec0b0e517&gatewayAdapt=glo2usa4itemAdapt">View Real</a>
             </div>
         </div>
@@ -118,8 +118,8 @@
            <img src="blade.png" alt=" stress shot png">
            <div class="item-content">
                <div class="item-title"> Stress Blade</div>
-               <a href="https://www.aliexpress.us/item/3256805945579188.html?spm=a2g0n.productlist.0.0.30ab11fbc146co&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb9681e917aee7b8cd39938291&gclid=&pdp_npi=4%40dis%21USD%210.85%210.47%21%21%210.85%21%21%402101fd4b17042226877123774e5fa7%2112000035901909965%21sea%21US%210%21AB&algo_pvid=f23b247a-eee7-4210-9a87-35ffa13a31bd">View Real</a>
                <div class="item-price">$̶1̶6̶.9̶9̶ <p>51¢ !</p> (Unnew - 85¢)</div>
+               <a href="https://www.aliexpress.us/item/3256805945579188.html?spm=a2g0n.productlist.0.0.30ab11fbc146co&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb9681e917aee7b8cd39938291&gclid=&pdp_npi=4%40dis%21USD%210.85%210.47%21%21%210.85%21%21%402101fd4b17042226877123774e5fa7%2112000035901909965%21sea%21US%210%21AB&algo_pvid=f23b247a-eee7-4210-9a87-35ffa13a31bd">View Real</a>
            </div>
        </div>
 
@@ -129,6 +129,15 @@
                 <div class="item-title">Python Stress Shot</div>
                 <div class="item-price">$̶3̶1̶.9̶9̶ <p>$22.80 !</p> (Unnew - 45.61$)</div>
                 <a href="https://www.aliexpress.us/item/3256806004962394.html?spm=a2g0o.productlist.main.55.64d15182QWdN7D&algo_pvid=681b317f-9546-4a51-8bc4-8097a90837f3&algo_exp_id=681b317f-9546-4a51-8bc4-8097a90837f3-27&pdp_npi=4%40dis%21USD%2145.45%2122.72%21%21%21324.89%21%21%402103850917049087950988062e2d83%2112000036202630034%21sea%21US%210%21AB&curPageLogUid=W1fs9tzDjAdI&utparam-url=scene%3Asearch%7Cquery_from%3A&_gl=1*9uvaiz*_ga*MTY5MzE3OTc5Ni4xNzA0OTA4MTMw*_ga_VED1YSGNC7*MTcwNDkwODEzMC4xLjEuMTcwNDkwODc5OS4xNy4wLjA.">View Real</a>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="uzi.png" alt=" uzi png">
+            <div class="item-content">
+                <div class="item-title">UZI Stress Shot</div>
+                <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$39.99 !</p> (Offsale - 66.50$)</div>
+                <a href="https://www.aliexpress.us/item/3256802770394148.html?spm=a2g0o.productlist.main.1.7ec6524drUhn7X&algo_pvid=3c8d4e79-2515-4479-ba77-7f729063f927&algo_exp_id=3c8d4e79-2515-4479-ba77-7f729063f927-0&pdp_npi=4%40dis%21USD%2166.50%2139.90%21%21%2166.50%2139.90%21%402101f49917066645924234490e5547%2112000022953232884%21sea%21US%210%21AB&curPageLogUid=UC4WUZevmUiI&utparam-url=scene%3Asearch%7Cquery_from%3A">View Real</a>
             </div>
         </div>
 
