--- a/scams.html
+++ b/scams.html
@@ -141,6 +141,17 @@
             </div>
         </div>
 
+        <br>
+
+        <div class="item">
+            <img src="viper.png" alt=" viper png">
+            <div class="item-content">
+                <div class="item-title">Viper Stress Shot</div>
+                <div class="item-price"> ̶$̶3̶1̶.̶9̶9̶ <p>$8.99 !</p> (Unnew - 35.00$)</div>
+                <a href="https://www.aliexpress.us/item/3256805923726645.html?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.3.7794416aqZu0eQ&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=834aec1d-298d-48f7-86a3-7aa2dada4843&_t=gps-id:pcDetailTopMoreOtherSeller,scm-url:1007.40050.354490.0,pvid:834aec1d-298d-48f7-86a3-7aa2dada4843,tpp_buckets:668%232846%238112%231997&pdp_npi=4%40dis%21USD%219.77%210.99%21%21%2169.84%217.11%21%402101eab017066653463337497e7ccb%2112000035792269011%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">View Real</a>
+            </div>
+        </div>
+
 
     </section>
 
