--- a/scams.html
+++ b/scams.html
@@ -152,6 +152,15 @@
             </div>
         </div>
 
+        <div class="item">
+            <img src="minip.png" alt=" minip png">
+            <div class="item-content">
+                <div class="item-title">Mini Python Stress Shot</div>
+                <div class="item-price"> ̶$̶18.̶9̶9̶ <p>$1.99 !</p> (Unnew - 11.00$)</div>
+                <a href="https://www.aliexpress.com/gcp/300000512/nnmixupdatev3?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.1.7a591403gYDBeU&productIds=1005006402446220&pha_manifest=ssr&_immersiveMode=true&disableNav=YES&channelLinkTag=nn_newgcp&sourceName=pcDetailTopMoreOtherSellerProduct&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">View Real</a>
+            </div>
+        </div>
+
 
     </section>
 
