--- a/scams.html
+++ b/scams.html
@@ -82,7 +82,8 @@
             <div class="item-content">
                 <div class="item-title">Titan Stress Shot</div>
                 <div class="item-price">$̶2̶9̶.̶9̶9̶ <p>$4.50 !</p> (Unnew - 7.55$)</div>
-                <a href="https://www.aliexpress.us/item/3256805863398142.html?spm=a2g0n.productlist.0.0.1cda47ba6IY365&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb364487200e05fcd22e7d53b0&gclid=&pdp_npi=4%40dis%21USD%217.56%214.31%21%21%2153.61%21%21%402101fd4b17042163805373685e5fb3%2112000035491678964%21sea%21US%210%21AB&algo_pvid=89481ae1-14b4-4b21-9b22-a59ec0b0e517&gatewayAdapt=glo2usa4itemAdapt">View Real</a>
+                <a href="https://www.aliexpress.us/item/3256805863398142.html?spm=a2g0n.productlist.0.0.1cda47ba6IY365&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb364487200e05fcd22e7d53b0&gclid=&pdp_npi=4%40dis%21USD%217.56%214.31%21%21%2153.61%21%21%402101fd4b17042163805373685e5fb3%2112000035491678964%21sea%21US%210%21AB&algo_pvid=89481ae1-14b4-4b21-9b22-a59ec0b0e517&gatewayAdapt=glo2usa4itemAdapt">Ali Express</a>
+                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099527927233&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F3965c3490ab5aabe75bfea9ca7ec6f44.jpg&refer_share_id=18045d34-f729-4ff9-9dc5-b348f182&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">TEMU</a>
             </div>
         </div>
 
