--- a/scams.html
+++ b/scams.html
@@ -158,7 +158,8 @@
             <div class="item-content">
                 <div class="item-title">Mini Python Stress Shot</div>
                 <div class="item-price"> ̶$̶18.̶9̶9̶ <p>$1.99 !</p> (Unnew - 11.00$)</div>
-                <a href="https://www.aliexpress.com/gcp/300000512/nnmixupdatev3?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.1.7a591403gYDBeU&productIds=1005006402446220&pha_manifest=ssr&_immersiveMode=true&disableNav=YES&channelLinkTag=nn_newgcp&sourceName=pcDetailTopMoreOtherSellerProduct&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">View Real</a>
+                <a href="https://www.aliexpress.com/gcp/300000512/nnmixupdatev3?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.1.7a591403gYDBeU&productIds=1005006402446220&pha_manifest=ssr&_immersiveMode=true&disableNav=YES&channelLinkTag=nn_newgcp&sourceName=pcDetailTopMoreOtherSellerProduct&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">Ali Express</a>
+                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099533727878&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F8fd6d7b3251860f94a31e9d152c3b0ea.jpg&refer_share_id=7522accb-f15e-43e0-b0e8-746ad34d&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">TEMU</a>
             </div>
         </div>
 
