--- a/scams.html
+++ b/scams.html
@@ -83,7 +83,7 @@
                 <div class="item-title">Titan Stress Shot</div>
                 <div class="item-price">$̶2̶9̶.̶9̶9̶ <p>$4.50 !</p> (Unnew - 7.55$)</div>
                 <a href="https://www.aliexpress.us/item/3256805863398142.html?spm=a2g0n.productlist.0.0.1cda47ba6IY365&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb364487200e05fcd22e7d53b0&gclid=&pdp_npi=4%40dis%21USD%217.56%214.31%21%21%2153.61%21%21%402101fd4b17042163805373685e5fb3%2112000035491678964%21sea%21US%210%21AB&algo_pvid=89481ae1-14b4-4b21-9b22-a59ec0b0e517&gatewayAdapt=glo2usa4itemAdapt">Ali Express</a>
-                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099527927233&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F3965c3490ab5aabe75bfea9ca7ec6f44.jpg&refer_share_id=18045d34-f729-4ff9-9dc5-b348f182&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">TEMU</a>
+                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099526189569&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F641ec7a3a8926607cfbbd4d6da6a2094.jpg&refer_share_id=99d3a533-2e78-4279-a982-cf7b54d1&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">TEMU</a>
             </div>
         </div>
 
@@ -103,6 +103,7 @@
                 <div class="item-title">Mini Stress Shot</div>
                 <div class="item-price">$̶1̶6̶.0̶0̶ <p>99¢ !</p> (Unnew - 9.04$)</div>
                 <a href="https://www.aliexpress.us/item/3256805902705805.html?spm=a2g0n.productlist.0.0.20322053ISzAqP&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18cca539e30241dd99751e078c2e8&gclid=&pdp_npi=4%40dis%21USD%219.09%210.99%21%21%2164.41%21%21%402101d8b517042015268157050e5cb6%2112000035680809480%21sea%21US%210%21AB&algo_pvid=17b64ee9-0063-4680-8bbb-3793f7874858&gatewayAdapt=glo2usa4itemAdapt">View Real</a>
+                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099527927233&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F3965c3490ab5aabe75bfea9ca7ec6f44.jpg&refer_share_id=18045d34-f729-4ff9-9dc5-b348f182&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">View Real</a>
             </div>
         </div>
 
