--- a/scams.html
+++ b/scams.html
@@ -93,7 +93,7 @@
             <div class="item-content">
                 <div class="item-title">Phantom Stress Shot</div>
                 <div class="item-price">$̶6̶0̶.0̶0̶ <p>$25.58 !</p>(Unnew - 51.17$)</div>
-                <a href="https://www.aliexpress.us/item/3256805912358009.html?src=google&aff_fcid=feea3261d63548ab871f5cbd721764f3-1706217223679-02126-UneMJZVf&aff_fsk=UneMJZVf&aff_platform=aaf&sk=UneMJZVf&aff_trace_key=feea3261d63548ab871f5cbd721764f3-1706217223679-02126-UneMJZVf&terminal_id=3f73c24c9f88427494dbcb31f95f4b98&afSmartRedirect=y&gatewayAdapt=glo2usa4itemAdapt">View Real</a>
+                <a href="https://www.aliexpress.us/item/3256805912358009.html?src=google&aff_fcid=feea3261d63548ab871f5cbd721764f3-1706217223679-02126-UneMJZVf&aff_fsk=UneMJZVf&aff_platform=aaf&sk=UneMJZVf&aff_trace_key=feea3261d63548ab871f5cbd721764f3-1706217223679-02126-UneMJZVf&terminal_id=3f73c24c9f88427494dbcb31f95f4b98&afSmartRedirect=y&gatewayAdapt=glo2usa4itemAdapt">Ali Express</a>
             </div>
         </div>
 
@@ -102,8 +102,8 @@
             <div class="item-content">
                 <div class="item-title">Mini Stress Shot</div>
                 <div class="item-price">$̶1̶6̶.0̶0̶ <p>99¢ !</p> (Unnew - 9.04$)</div>
-                <a href="https://www.aliexpress.us/item/3256805902705805.html?spm=a2g0n.productlist.0.0.20322053ISzAqP&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18cca539e30241dd99751e078c2e8&gclid=&pdp_npi=4%40dis%21USD%219.09%210.99%21%21%2164.41%21%21%402101d8b517042015268157050e5cb6%2112000035680809480%21sea%21US%210%21AB&algo_pvid=17b64ee9-0063-4680-8bbb-3793f7874858&gatewayAdapt=glo2usa4itemAdapt">View Real</a>
-                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099527927233&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F3965c3490ab5aabe75bfea9ca7ec6f44.jpg&refer_share_id=18045d34-f729-4ff9-9dc5-b348f182&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">View Real</a>
+                <a href="https://www.aliexpress.us/item/3256805902705805.html?spm=a2g0n.productlist.0.0.20322053ISzAqP&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18cca539e30241dd99751e078c2e8&gclid=&pdp_npi=4%40dis%21USD%219.09%210.99%21%21%2164.41%21%21%402101d8b517042015268157050e5cb6%2112000035680809480%21sea%21US%210%21AB&algo_pvid=17b64ee9-0063-4680-8bbb-3793f7874858&gatewayAdapt=glo2usa4itemAdapt">Ali Express</a>
+                <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099527927233&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F3965c3490ab5aabe75bfea9ca7ec6f44.jpg&refer_share_id=18045d34-f729-4ff9-9dc5-b348f182&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">TEMU</a>
             </div>
         </div>
 
@@ -112,7 +112,7 @@
            <div class="item-content">
                <div class="item-title">Raptor Stress Shot</div>
                <div class="item-price">$̶3̶1̶.9̶9̶ <p>$3.00 !</p> (Unnew - 23.54$)</div>
-               <a href="https://www.aliexpress.us/item/3256805970221869.html?spm=a2g0o.detail.0.0.24e6ve2nve2nwY&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=cf325868-67d3-4b2c-8c24-16b6070bfe8d&_t=gps-id%3ApcDetailTopMoreOtherSeller%2Cscm-url%3A1007.40050.354490.0%2Cpvid%3Acf325868-67d3-4b2c-8c24-16b6070bfe8d%2Ctpp_buckets%3A668%232846%238116%232002&pdp_npi=4%40dis%21ILS%2189.73%2111.24%21%21%21167.68%2121.00%21%402101efeb17059444315252101ec2b9%2112000036026300875%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A">View Real</a>
+               <a href="https://www.aliexpress.us/item/3256805970221869.html?spm=a2g0o.detail.0.0.24e6ve2nve2nwY&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=cf325868-67d3-4b2c-8c24-16b6070bfe8d&_t=gps-id%3ApcDetailTopMoreOtherSeller%2Cscm-url%3A1007.40050.354490.0%2Cpvid%3Acf325868-67d3-4b2c-8c24-16b6070bfe8d%2Ctpp_buckets%3A668%232846%238116%232002&pdp_npi=4%40dis%21ILS%2189.73%2111.24%21%21%21167.68%2121.00%21%402101efeb17059444315252101ec2b9%2112000036026300875%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A">Ali Express</a>
            </div>
        </div>
 
@@ -121,7 +121,7 @@
            <div class="item-content">
                <div class="item-title"> Stress Blade</div>
                <div class="item-price">$̶1̶6̶.9̶9̶ <p>51¢ !</p> (Unnew - 85¢)</div>
-               <a href="https://www.aliexpress.us/item/3256805945579188.html?spm=a2g0n.productlist.0.0.30ab11fbc146co&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb9681e917aee7b8cd39938291&gclid=&pdp_npi=4%40dis%21USD%210.85%210.47%21%21%210.85%21%21%402101fd4b17042226877123774e5fa7%2112000035901909965%21sea%21US%210%21AB&algo_pvid=f23b247a-eee7-4210-9a87-35ffa13a31bd">View Real</a>
+               <a href="https://www.aliexpress.us/item/3256805945579188.html?spm=a2g0n.productlist.0.0.30ab11fbc146co&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb9681e917aee7b8cd39938291&gclid=&pdp_npi=4%40dis%21USD%210.85%210.47%21%21%210.85%21%21%402101fd4b17042226877123774e5fa7%2112000035901909965%21sea%21US%210%21AB&algo_pvid=f23b247a-eee7-4210-9a87-35ffa13a31bd">Ali Express</a>
            </div>
        </div>
 
@@ -130,7 +130,7 @@
             <div class="item-content">
                 <div class="item-title">Python Stress Shot</div>
                 <div class="item-price">$̶3̶1̶.9̶9̶ <p>$22.80 !</p> (Unnew - 45.61$)</div>
-                <a href="https://www.aliexpress.us/item/3256806004962394.html?spm=a2g0o.productlist.main.55.64d15182QWdN7D&algo_pvid=681b317f-9546-4a51-8bc4-8097a90837f3&algo_exp_id=681b317f-9546-4a51-8bc4-8097a90837f3-27&pdp_npi=4%40dis%21USD%2145.45%2122.72%21%21%21324.89%21%21%402103850917049087950988062e2d83%2112000036202630034%21sea%21US%210%21AB&curPageLogUid=W1fs9tzDjAdI&utparam-url=scene%3Asearch%7Cquery_from%3A&_gl=1*9uvaiz*_ga*MTY5MzE3OTc5Ni4xNzA0OTA4MTMw*_ga_VED1YSGNC7*MTcwNDkwODEzMC4xLjEuMTcwNDkwODc5OS4xNy4wLjA.">View Real</a>
+                <a href="https://www.aliexpress.us/item/3256806004962394.html?spm=a2g0o.productlist.main.55.64d15182QWdN7D&algo_pvid=681b317f-9546-4a51-8bc4-8097a90837f3&algo_exp_id=681b317f-9546-4a51-8bc4-8097a90837f3-27&pdp_npi=4%40dis%21USD%2145.45%2122.72%21%21%21324.89%21%21%402103850917049087950988062e2d83%2112000036202630034%21sea%21US%210%21AB&curPageLogUid=W1fs9tzDjAdI&utparam-url=scene%3Asearch%7Cquery_from%3A&_gl=1*9uvaiz*_ga*MTY5MzE3OTc5Ni4xNzA0OTA4MTMw*_ga_VED1YSGNC7*MTcwNDkwODEzMC4xLjEuMTcwNDkwODc5OS4xNy4wLjA.">Ali Express</a>
             </div>
         </div>
 
@@ -139,7 +139,7 @@
             <div class="item-content">
                 <div class="item-title">UZI Stress Shot</div>
                 <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$39.99 !</p> (Offsale - 66.50$)</div>
-                <a href="https://www.aliexpress.us/item/3256802770394148.html?spm=a2g0o.productlist.main.1.7ec6524drUhn7X&algo_pvid=3c8d4e79-2515-4479-ba77-7f729063f927&algo_exp_id=3c8d4e79-2515-4479-ba77-7f729063f927-0&pdp_npi=4%40dis%21USD%2166.50%2139.90%21%21%2166.50%2139.90%21%402101f49917066645924234490e5547%2112000022953232884%21sea%21US%210%21AB&curPageLogUid=UC4WUZevmUiI&utparam-url=scene%3Asearch%7Cquery_from%3A">View Real</a>
+                <a href="https://www.aliexpress.us/item/3256802770394148.html?spm=a2g0o.productlist.main.1.7ec6524drUhn7X&algo_pvid=3c8d4e79-2515-4479-ba77-7f729063f927&algo_exp_id=3c8d4e79-2515-4479-ba77-7f729063f927-0&pdp_npi=4%40dis%21USD%2166.50%2139.90%21%21%2166.50%2139.90%21%402101f49917066645924234490e5547%2112000022953232884%21sea%21US%210%21AB&curPageLogUid=UC4WUZevmUiI&utparam-url=scene%3Asearch%7Cquery_from%3A">Ali Express</a>
             </div>
         </div>
 
@@ -150,7 +150,7 @@
             <div class="item-content">
                 <div class="item-title">Viper Stress Shot</div>
                 <div class="item-price"> ̶$̶3̶1̶.̶9̶9̶ <p>$8.99 !</p> (Unnew - 35.00$)</div>
-                <a href="https://www.aliexpress.us/item/3256805923726645.html?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.3.7794416aqZu0eQ&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=834aec1d-298d-48f7-86a3-7aa2dada4843&_t=gps-id:pcDetailTopMoreOtherSeller,scm-url:1007.40050.354490.0,pvid:834aec1d-298d-48f7-86a3-7aa2dada4843,tpp_buckets:668%232846%238112%231997&pdp_npi=4%40dis%21USD%219.77%210.99%21%21%2169.84%217.11%21%402101eab017066653463337497e7ccb%2112000035792269011%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">View Real</a>
+                <a href="https://www.aliexpress.us/item/3256805923726645.html?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.3.7794416aqZu0eQ&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=834aec1d-298d-48f7-86a3-7aa2dada4843&_t=gps-id:pcDetailTopMoreOtherSeller,scm-url:1007.40050.354490.0,pvid:834aec1d-298d-48f7-86a3-7aa2dada4843,tpp_buckets:668%232846%238112%231997&pdp_npi=4%40dis%21USD%219.77%210.99%21%21%2169.84%217.11%21%402101eab017066653463337497e7ccb%2112000035792269011%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">Ali Express</a>
             </div>
         </div>
 
