--- a/scams.html
+++ b/scams.html
@@ -74,6 +74,7 @@
 
     <header>
         <h1>GMONX's Active Reverse Dropshipping</h1>
+        <h2>THANK YOU SO MUCH FOR 1K VEIWS! (ADDED SOME TEMU LINKS!)</h2>
     </header>
 
     <section>
