--- a/scams.html
+++ b/scams.html
@@ -175,7 +175,7 @@
         </div>
 
         <div class="item">
-            <img src="reaper.jpeg" alt=" reaper png">
+            <img src="ray.jpeg" alt=" shadow png">
             <div class="item-content">
                 <div class="item-title">Shadow Stress Shot</div>
                 <div class="item-price"> ̶$̶64.̶9̶9̶ <p>$39.99 !</p> (Unnew - 60.00$)</div>
