--- a/scams.html
+++ b/scams.html
@@ -169,8 +169,8 @@
             <img src="reaper.jpeg" alt=" reaper png">
             <div class="item-content">
                 <div class="item-title">Reaper Stress Shot</div>
-                <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$13.99 !</p> (View Real)</div>
-                <a href="https://www.temu.com/2023-new-toy-gun-soft-clip-pistol-can-be-upgraded-for-continuous-shooting-short-position-suspension-mode-magazine-and-pull-back-action-easy-to-play-with-foam-shockwave-no-damage-g-601099536825415.html?top_gallery_url=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2Ff8f9e610f9a00aff0a6ac9cad1f0d5cc.jpg&spec_gallery_id=2062762221&refer_page_sn=10009&refer_source=0&freesia_scene=2&_oak_freesia_scene=2&_oak_rec_ext_1=MTM5OA&search_key=2023%20new%20toy%20gun%20soft%20clip%20pistol&refer_page_el_sn=200049&_x_sessn_id=v81profgj5&refer_page_name=search_result&refer_page_id=10009_1706721190628_3w95hiompm">Temu</a>
+                <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$7.99 !</p> (View Real)</div>
+                <a href="https://www.temu.com/mechanical-semi-automatic-pistol-automatic-toy-gun-boys-pistol-empty-chamber-hanging-one-key-shell-ejection-rapid-fire-includes-20-bullets-and-6-shells-g-601099525921338.html?top_gallery_url=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F94c0bc53ba60a55533a7eec742af34a8.jpg&spec_gallery_id=2044723292&refer_page_sn=10009&refer_source=0&freesia_scene=2&_oak_freesia_scene=2&_oak_rec_ext_1=Nzk5&_oak_gallery_order=82032043%2C845606033%2C1809884976%2C250603988%2C1236526129&search_key=rapid%20fire%20toy%20gun&refer_page_el_sn=200049&_x_share_id=18045d34-f729-4ff9-9dc5-b348f182&_x_sessn_id=0ono5zycxa&refer_page_name=search_result&refer_page_id=10009_1707261515619_d8a7n6rqp9">Temu</a>
             </div>
         </div>
 
