--- a/scams.html
+++ b/scams.html
@@ -153,6 +153,9 @@
                 <div class="item-title">Viper Stress Shot</div>
                 <div class="item-price"> ̶$̶3̶1̶.̶9̶9̶ <p>$8.99 !</p> (View Real)</div>
                 <a href="https://www.aliexpress.us/item/3256805923726645.html?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.3.7794416aqZu0eQ&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=834aec1d-298d-48f7-86a3-7aa2dada4843&_t=gps-id:pcDetailTopMoreOtherSeller,scm-url:1007.40050.354490.0,pvid:834aec1d-298d-48f7-86a3-7aa2dada4843,tpp_buckets:668%232846%238112%231997&pdp_npi=4%40dis%21USD%219.77%210.99%21%21%2169.84%217.11%21%402101eab017066653463337497e7ccb%2112000035792269011%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">Ali Express</a>
+                <a href="https://www.temu.com/upgrade-contrast-toy-gun-educational-toy-model-science-and-education-toy-gun-model-toy-pistol-shooting-game-catapult-toy-g-601099531534558.html?top_gallery_url=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2Fbaa4f0ed4dae435d25e6eed6ed77ff9a.jpg&spec_gallery_id=2053769248&refer_page_sn=10009&refer_source=0&freesia_scene=2&_oak_freesia_scene=2&_oak_rec_ext_1=MzQ4&_oak_gallery_order=29716133%2C19208871%2C1697730628%2C327178682%2C219640423&search_key=rapid%20fire%20toy%20gun&refer_page_el_sn=200049&_x_share_id=18045d34-f729-4ff9-9dc5-b348f182&_x_sessn_id=0ono5zycxa&refer_page_name=search_result&refer_page_id=10009_1707261594591_w5e29br265">TEMU</a>
+            </div>
+        </div>
             </div>
         </div>
 
