--- a/scams.html
+++ b/scams.html
@@ -109,10 +109,10 @@
         </div>
 
          <div class="item">
-            <img src="ray.png" alt=" shadow png">
+            <img src="pro.png" alt=" stress pro png">
             <div class="item-content">
                 <div class="item-title">PRO Mini Stress Shot</div>
-                <div class="item-price"> ̶$̶64.̶9̶9̶ <p>$39.99 !</p> (View Real)</div>
+                <div class="item-price"> ̶$̶20.̶9̶9̶ <p>$5.99 !</p> (View Real)</div>
                 <a href="https://www.temu.com/3d-printed-gravity-toy-mini-pistol-new-upgraded-removable-magazine-fidget-stress-relief-toy-for-adults-fun-plastic-edc-non-shooting-gun-toy-sensory-anxiety-stress-relief-toy-not-fireable-g-601099529048296.html?top_gallery_url=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2Ff32cdbb2aa7dffcd9e58a69469dcd13b.jpg&spec_gallery_id=2042457354&refer_page_sn=10009&refer_source=0&freesia_scene=2&_oak_freesia_scene=2&_oak_rec_ext_1=NDk5&_oak_gallery_order=388655036%2C1281362002%2C820444750%2C907935558%2C1318589131&search_key=gravity%20pistol&refer_page_el_sn=200049&refer_page_name=search_result&refer_page_id=10009_1707261594591_w5e29br265&_x_sessn_id=0ono5zycxa">TEMU</a>
             </div>
         </div>
