--- a/scams.html
+++ b/scams.html
@@ -189,7 +189,7 @@
         <div class="item">
             <img src="shot.png" alt=" shottgun png">
             <div class="item-content">
-                <div class="item-title">UZI Stress Shot</div>
+                <div class="item-title">DOOM Stress Shot</div>
                 <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$45.99 !</p> (View Real)</div>
                 <a href="https://www.amazon.com/Blasters-33-Inch-Shotgun-Ejecting-Perfect/dp/B0BZ8CKW6Y?th=1&psc=1">Amazon!</a>
             </div>
