--- a/scams.html
+++ b/scams.html
@@ -187,7 +187,7 @@
         </div>
 
         <div class="item">
-            <img src="shot.png" alt=" shottgun png">
+            <img src="Shot.png" alt=" shottgun png">
             <div class="item-content">
                 <div class="item-title">DOOM Stress Shot</div>
                 <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$45.99 !</p> (View Real)</div>
