--- a/scams.html
+++ b/scams.html
@@ -68,6 +68,10 @@
           color: red;
           font-family: system-ui;
         }
+
+        .catagory {
+          color: black;
+        }
     </style>
 </head>
 <body>
@@ -78,6 +82,8 @@
     </header>
 
     <section>
+
+        <h1 class="catagory">Stress Shot Items</h1>
         <div class="item">
             <img src="titan.png" alt="Titan Stress Shot">
             <div class="item-content">
@@ -194,6 +200,9 @@
                 <a href="https://www.amazon.com/Blasters-33-Inch-Shotgun-Ejecting-Perfect/dp/B0BZ8CKW6Y?th=1&psc=1">Amazon!</a>
             </div>
         </div>
+
+
+        <h1 class="catagory">Eleframe Items</h1>
         
 
         
