--- a/scams.html
+++ b/scams.html
@@ -212,14 +212,29 @@
                 <a href="https://www.amazon.com/Blasters-33-Inch-Shotgun-Ejecting-Perfect/dp/B0BZ8CKW6Y?th=1&psc=1">Amazon!</a>
             </div>
         </div>
+    </section>
 
 
+     <div class="category-title">Stress Shots</div>
+    <section>
+        
+        <div class="item">
+            <img src="titan.png" alt="Titan Stress Shot">
+            <div class="item-content">
+                <div class="item-title">Ela Frame</div>
+                <div class="item-price">$̶19̶.̶9̶9̶ <p>39¢ !</p> (View Real!)</div>
+                <a href="https://www.aliexpress.us/item/3256805860385893.html?src=google&src=google&albch=shopping&acnt=548-301-0399&slnk=&plac=&mtctp=&albbt=Google_7_shopping&aff_fcid=3cd57920c5204d96bea511a64cc6ca49-1703916956668-04875-_DEjhbFB&tt=CPS_NORMAL&aff_fsk=_DEjhbFB&aff_platform=portals-tool&sk=_DEjhbFB&aff_trace_key=3cd57920c5204d96bea511a64cc6ca49-1703916956668-04875-_DEjhbFB&terminal_id=35a6b4b8711f4fd5b893b7a17aef5d66&afSmartRedirect=y&gatewayAdapt=bra2usa4itemAdapt#nav-review">Ali Express</a>
+            </div>
+        </div>
 
-
-
-
-
-
+        <div class="item">
+            <img src="titan.png" alt="Titan Stress Shot">
+            <div class="item-content">
+                <div class="item-title">Multiple Ela Frame</div>
+                <div class="item-price">$̶189̶.̶9̶9̶ <p>1$! (DEAL!)</p> (View Real!)</div>
+                <a href="https://www.aliexpress.us/item/3256806069141662.html?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.1.385eJaaPJaaPBu&gps-id=pcDetailTopMoreOtherSeller&scm=1007.40050.354490.0&scm_id=1007.40050.354490.0&scm-url=1007.40050.354490.0&pvid=4299f2db-88af-4ab0-b0ca-978b02711aeb&_t=gps-id:pcDetailTopMoreOtherSeller,scm-url:1007.40050.354490.0,pvid:4299f2db-88af-4ab0-b0ca-978b02711aeb,tpp_buckets:668%232846%238110%231995&pdp_npi=4%40dis%21USD%2110.07%210.99%21%21%2172.26%217.12%21%402101c80217075104269635070ed24f%2112000036486877120%21rec%21US%21%21AB&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A">Ali Express</a>
+            </div>
+        </div>
     </section>
 
 </body>
