--- a/scams.html
+++ b/scams.html
@@ -157,9 +157,8 @@
             <img src="python.png" alt=" python png">
             <div class="item-content">
                 <div class="item-title">Python Stress Shot</div>
-                <div class="item-price">$̶3̶1̶.9̶9̶ <p>$12.49 !</p> (View Real)</div>
-                <a href="https://www.temu.com/revolver-toy-can-fire-soft-foam-refill-bullets-water-gel-beads-digital-shooting-targets-with-foam--toy-shooting-blaster-shooting-toys-for-children-kid-boys-girls-compatible-g-601099525907406.html?top_gallery_url=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F15ef44226af022b30527aa75519ce8c5.jpg&spec_gallery_id=2029774816&refer_page_sn=10009&refer_source=0&freesia_scene=2&_oak_freesia_scene=2&_oak_rec_ext_1=MTI0OA&_oak_gallery_order=1806808591%2C261235997%2C868206759%2C726754303%2C1675834664&search_key=rapid%20fire%20toy%20gun&refer_page_el_sn=200049&_x_share_id=18045d34-f729-4ff9-9dc5-b348f182&_x_sessn_id=0ono5zycxa&refer_page_name=search_result&refer_page_id=10009_1707261594591_w5e29br265">TEMU</a>
-            </div>
+                <div class="item-price">$̶3̶1̶.9̶9̶ <p>$8.49 !</p> (View Real)</div>
+                <a href="https://share.temu.com/nRCoMv7bq1A"> TEMU (FIXED!) </a>
         </div>
 
         <div class="item">
