--- a/scams.html
+++ b/scams.html
@@ -159,6 +159,7 @@
                 <div class="item-title">Python Stress Shot</div>
                 <div class="item-price">$̶3̶1̶.9̶9̶ <p>$8.49 !</p> (View Real)</div>
                 <a href="https://share.temu.com/nRCoMv7bq1A"> TEMU (FIXED!) </a>
+            </div>
         </div>
 
         <div class="item">
