--- a/scams.html
+++ b/scams.html
@@ -190,7 +190,7 @@
             <div class="item-content">
                 <div class="item-title">Mini Python Stress Shot</div>
                 <div class="item-price"> ̶$̶18.̶9̶9̶ <p>$1.99 !</p> (View Real)</div>
-                <a href="https://www.aliexpress.com/gcp/300000512/nnmixupdatev3?spm=a2g0o.detail.pcDetailTopMoreOtherSeller.1.7a591403gYDBeU&productIds=1005006402446220&pha_manifest=ssr&_immersiveMode=true&disableNav=YES&channelLinkTag=nn_newgcp&sourceName=pcDetailTopMoreOtherSellerProduct&utparam-url=scene%3ApcDetailTopMoreOtherSeller%7Cquery_from%3A#nav-review">Ali Express</a>
+                <a href="https://www.aliexpress.us/item/3256805863398142.html?spm=a2g0n.productlist.0.0.1cda47ba6IY365&browser_id=9de81ee21dd7464f8f940e7364d7aba8&aff_platform=msite&m_page_id=deeeddffedaba18ccb364487200e05fcd22e7d53b0&gclid=&pdp_npi=4%40dis%21USD%217.56%214.31%21%21%2153.61%21%21%402101fd4b17042163805373685e5fb3%2112000035491678964%21sea%21US%210%21AB&algo_pvid=89481ae1-14b4-4b21-9b22-a59ec0b0e517&gatewayAdapt=glo2usa4itemAdapt">Ali(Scroll through options)</a>
                 <a href="https://www.temu.com/goods.html?_bg_fs=1&goods_id=601099533727878&from_share=1&share_img=https%3A%2F%2Fimg.kwcdn.com%2Fproduct%2FFancyalgo%2FVirtualModelMatting%2F8fd6d7b3251860f94a31e9d152c3b0ea.jpg&refer_share_id=7522accb-f15e-43e0-b0e8-746ad34d&refer_share_channel=copy_link&_oak_page_source=417&_oak_region=211&refer_share_suin=BA6RRZZYLA7Q4FZQGA32ZETSCRHUY5BEIEBXAHKISTUU6">TEMU</a>
             </div>
         </div>
