--- a/scams.html
+++ b/scams.html
@@ -210,6 +210,7 @@
                 <div class="item-title">DOOM Stress Shot</div>
                 <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$45.99 !</p> (View Real)</div>
                 <a href="https://www.amazon.com/Blasters-33-Inch-Shotgun-Ejecting-Perfect/dp/B0BZ8CKW6Y?th=1&psc=1">Amazon!</a>
+                <a href="https://share.temu.com/dsyy0GsUN1A">Temu </a>
             </div>
         </div>
     </section>
