--- a/scams.html
+++ b/scams.html
@@ -249,6 +249,19 @@
             </div>
         </div>
 
+        </section>
+     <div class="category-title">Plushies</div>
+    <section>
+        
+        <div class="item">
+            <img src="holo.png" alt="hOLOSPIN">
+            <div class="item-content">
+                <div class="item-title">Pou Plushie</div>
+                <div class="item-price">$̶30.̶9̶9̶ <p>3$ !</p> (View Real!)</div>
+                <a href="https://share.temu.com/e1gmhdVt2qA">Temu</a>
+            </div>
+        </div>
+
         
     </section>
 
