--- a/scams.html
+++ b/scams.html
@@ -92,6 +92,17 @@
         <h1>GMONX's Active Reverse Dropshipping</h1>
         <h2>THANK YOU SO MUCH FOR 10K VEIWS! (REAPER STRESS SHOT FIXEX!)</h2>
     </header>
+  <div class="category-title">Guns Shown In My Vids!</div>
+   <section>
+       <div class="item">
+            <img src="reaper.jpeg" alt=" reaper png">
+            <div class="item-content">
+                <div class="item-title">Reaper Stress Shot</div>
+                <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$12.00 !</p> (View Real)</div>
+                <a href="https://share.temu.com/QSJJliUgjWA">TEMU</a>
+            </div>
+       </div>
+   </section>
 
 
   <div class="category-title">Stress Shots</div>
