--- a/scams.html
+++ b/scams.html
@@ -94,6 +94,14 @@
     </header>
   <div class="category-title">Guns Shown In My Vids!</div>
    <section>
+        <div class="item">
+            <img src="temu.png" alt=" temu png">
+            <div class="item-content">
+                <div class="item-title">Can't Find A Gun? <br> Want to search for More? <br> 1 - Click Here To Download TEMU <br> 2 - Sign in for the Deals <br> Search "Toy Guns" And Pick One!</div>
+                <a href="https://temu.to/m/usmdtmry7rg">GO -></a>
+            </div>
+       </div>
+       
        <div class="item">
             <img src="reaper.jpeg" alt=" reaper png">
             <div class="item-content">
