--- a/scams.html
+++ b/scams.html
@@ -60,6 +60,12 @@
             margin-bottom: 10px;
         }
 
+        .item-title2 {
+            font-size: 1.0em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
         .item-price, p {
             color: #007bff;
             font-size: 1.1em;\
@@ -97,7 +103,7 @@
         <div class="item">
             <img src="temu.png" alt=" temu png">
             <div class="item-content">
-                <div class="item-title">Can't Find A Gun? <br> Want to search for More? <br> 1 - Click Here To Download TEMU <br> 2 - Sign in for the Deals <br> Search "Toy Guns" And Pick One!</div>
+                <div class="item-title2">Can't Find A Gun? <br> Want to search for More? <br> 1 - Click Here To Download TEMU <br> 2 - Sign in for the Deals <br> Search "Toy Guns" And Pick One!</div>
                 <a href="https://temu.to/m/usmdtmry7rg">GO -></a>
             </div>
        </div>
