--- a/scams.html
+++ b/scams.html
@@ -103,7 +103,7 @@
         <div class="item">
             <img src="temu.png" alt=" temu png">
             <div class="item-content">
-                <div class="item-title2">Can't Find A Gun? <br> Want to search for More? <br> 1 - Click Here To Download TEMU <br> 2 - Sign in for the Deals <br> Search "Toy Guns" And Pick One!</div>
+                <div class="item-title2">Can't Find A Gun? <br> Want to search for More? <br> 1 - Click Here To Download TEMU <br> 2 - Sign in for the Deals <br> 3 - Search "Toy Guns" And Pick One!</div>
                 <a href="https://temu.to/m/usmdtmry7rg">GO -></a>
             </div>
        </div>
