--- a/scams.html
+++ b/scams.html
@@ -282,8 +282,8 @@
             <img src="holo.png" alt="hOLOSPIN">
             <div class="item-content">
                 <div class="item-title">Pou Plushie</div>
-                <div class="item-price">$̶30.̶9̶9̶ <p>3$ !</p> (View Real!)</div>
-                <a href="https://share.temu.com/e1gmhdVt2qA">Temu</a>
+                <div class="item-price">$̶30.̶9̶9̶ <p>1$ !</p> (View Real!)</div>
+                <a href="https://temu.to/m/unffjx0szlb">Temu</a>
             </div>
         </div>
 
