--- a/scams.html
+++ b/scams.html
@@ -238,7 +238,19 @@
                 <a href="https://share.temu.com/dsyy0GsUN1A">Temu </a>
             </div>
         </div>
+
+        <div class="item">
+            <img src="butt.png" alt=" shottgun png">
+            <div class="item-content">
+                <div class="item-title">Peace Butterfly Knife</div>
+                <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$45.99 !</p> (View Real)</div>
+                <a href="https://temu.to/m/uzdhpdubiee">Temu </a>
+            </div>
+        </div>
     </section>
+
+
+    
 
 
      <div class="category-title">Ela Frames</div>
@@ -279,7 +291,7 @@
     <section>
         
         <div class="item">
-            <img src="holo.png" alt="hOLOSPIN">
+            <img src="po.png" alt="hOLOSPIN">
             <div class="item-content">
                 <div class="item-title">Pou Plushie</div>
                 <div class="item-price">$̶30.̶9̶9̶ <p>1$ !</p> (View Real!)</div>
