--- a/scams.html
+++ b/scams.html
@@ -95,8 +95,8 @@
 <body>
 
     <header>
-        <h1>GMONX's Active Reverse Dropshipping</h1>
-        <h2>THANK YOU SO MUCH FOR 10K VEIWS! (REAPER STRESS SHOT FIXEX!)</h2>
+        <h1>GMONX's Active Reverse Dropshipping Site</h1>
+        <h2>THANK YOU SO MUCH FOR 25K VEIWS! (NEW SECTION ADDED!)</h2>
     </header>
   <div class="category-title">Guns Shown In My Vids!</div>
    <section>
