--- a/scams.html
+++ b/scams.html
@@ -243,7 +243,7 @@
             <img src="butt.png" alt=" shottgun png">
             <div class="item-content">
                 <div class="item-title">Peace Butterfly Knife</div>
-                <div class="item-price">$̶7̶9̶.̶9̶9̶ <p>$45.99 !</p> (View Real)</div>
+                <div class="item-price">$̶19̶.̶9̶9̶ <p>$1 !</p> (View Real)</div>
                 <a href="https://temu.to/m/uzdhpdubiee">Temu </a>
             </div>
         </div>
