--- a/scams.html
+++ b/scams.html
@@ -249,7 +249,7 @@
         </div>
 
         <div class="item">
-            <img src="butt.png" alt=" shottgun png">
+            <img src="veli.png" alt=" vector png">
             <div class="item-content">
                 <div class="item-title">Vector Stress Shot/div>
                 <div class="item-price">$̶79̶.̶9̶9̶ <p>$$40 !</p> (View Real)</div>
