--- a/scams.html
+++ b/scams.html
@@ -251,7 +251,7 @@
         <div class="item">
             <img src="veli.png" alt=" vector png">
             <div class="item-content">
-                <div class="item-title">Vector Stress Shot/div>
+                <div class="item-title">Vector Stress Shot</div>
                 <div class="item-price">$̶79̶.̶9̶9̶ <p>$$40 !</p> (View Real)</div>
                 <a href="https://www.amazon.com/Electric-Blaster-Auto-Manual-Shooting-Education/dp/B0BS3S5HMQ/ref=sr_1_5?crid=2HYWFX8P1CSZG&dib=eyJ2IjoiMSJ9.38DOJ7Nnt8LuEMtSeZYCTmX5eu-iuRvXQmQrAJY0WRwoljv02-1lUZOjFXtV8I-B9qc2LQKtOJ5FDSaLnfuRzQ.eMnltErSN6JqUSpShBIYMYzCcrrhacUZDxZXret6EWM&dib_tag=se&keywords=VELIYAKA&qid=1709585650&sprefix=veliyaka%2Caps%2C106&sr=8-5&th=1">Amazon!</a>
             </div>
