--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
 <body>
   <h1>Welcome To The Home Page (for now)</h1>
-
+  <img src='reaper.jpeg'>
+  <h2>Go To</h2> <a href='https://deoweb.github.io/scams'>Reverse Dropshipping Site! (click me)</a>
+  <h3>Rhythm Game</h3>
+  
   <img src='basicsword.png'>
   <h2>Go To</h2> <a href='https://deoweb.github.io/pirate'>Grim Pirate  (click me)</a>
   <h3>Clicker Game</h3>
@@ -38,6 +41,11 @@
   <img src='IMG_0099.png'>
   <h2>Go To</h2> <a href='https://deoweb.github.io/Gd'>Geometry Dash  (click me)</a>
   <h3>Rhythm Game</h3>
+
+  <img src='holo.png'>
+  <h2>Go To</h2> <a href='https://deoweb.github.io/ball'>balls (click me)</a>
+  <h3>Rhythm Game</h3>
+
 </body>
 
 </html>
