--- a/winners.html
+++ b/winners.html
@@ -137,7 +137,7 @@
 GOOD JOB! ~ HOPE YOU ENJOYED!
 </h2>
 <br>
-<a href='ball.html' class='centered-link'> RESTART! (DONT FORGET TO CLEAR COOKIES!)</a>
+<a href='ball.html' class='centered-link'> RESTART!</a>
 
 <div>
 
