--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h1>Welcome To The Home Page (for now)</h1>
   <img src='reaper.jpeg'>
   <h2>Go To</h2> <a href='https://deoweb.github.io/scams'>Reverse Dropshipping Site! (click me)</a>
-  <h3>Rhythm Game</h3>
+  <h3>Shopping</h3>
   
   <img src='basicsword.png'>
   <h2>Go To</h2> <a href='https://deoweb.github.io/pirate'>Grim Pirate  (click me)</a>
@@ -43,8 +43,8 @@
   <h3>Rhythm Game</h3>
 
   <img src='holo.png'>
-  <h2>Go To</h2> <a href='https://deoweb.github.io/ball'>balls (click me)</a>
-  <h3>Rhythm Game</h3>
+  <h2>Go To</h2> <a href='https://deoweb.github.io/ball'>balls (balls)</a>
+  <h3> balls </h3>
 
 </body>
 
