--- a/scams.html
+++ b/scams.html
@@ -96,7 +96,7 @@
 
     <header>
         <h1>GMONX's Active Reverse Dropshipping Site</h1>
-        <h2>THANK YOU SO MUCH FOR 25K VEIWS! (NEW SECTION ADDED!)</h2>
+        <h2>THANK YOU SO MUCH FOR 40K VEIWS! (NEW VIDEO!)</h2>
     </header>
   <div class="category-title">Guns Shown In My Vids!</div>
    <section>
