--- a/scams.html
+++ b/scams.html
@@ -107,12 +107,21 @@
                 <a href="https://temu.to/m/usmdtmry7rg">GO -></a>
             </div>
        </div>
+
+       <div class="item">
+            <img src="mega.png" alt=" reaper png">
+            <div class="item-content">
+                <div class="item-title">M1911 + Shooting <br> (AKA Mega TITAN ss)</div>
+                <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$9.90 !</p> (View)</div>
+                <a href="https://share.temu.com/QSJJliUgjWA">TEMU</a>
+            </div>
+       </div>
        
        <div class="item">
             <img src="reaper.jpeg" alt=" reaper png">
             <div class="item-content">
                 <div class="item-title">Reaper Stress Shot</div>
-                <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$12.00 !</p> (View Real)</div>
+                <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$12.00 !</p> (View)</div>
                 <a href="https://share.temu.com/QSJJliUgjWA">TEMU</a>
             </div>
        </div>
