--- a/scams.html
+++ b/scams.html
@@ -120,7 +120,7 @@
        <div class="item">
             <img src="reaper.jpeg" alt=" reaper png">
             <div class="item-content">
-                <div class="item-title">Reaper Stress Shot</div>
+                <div class="item-title">TTI-2011 Gun <br> (AKA Reaper Stress Shot)</div>
                 <div class="item-price"> ̶$̶3̶3̶.̶9̶9̶ <p>$12.00 !</p> (View)</div>
                 <a href="https://share.temu.com/QSJJliUgjWA">TEMU</a>
             </div>
